Added link to top of the page on footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="container">
       <div class="hero">
-        <h3>Welcome to</h3>
+        <h3 id="home">Welcome to</h3>
         <h1>Marbella</h1>
         <h2>Beautiful city on the sunny southern coast of Spain</h2>
         <a href="#more">Learn more</a>
@@ -588,6 +588,11 @@
               >
               .
             </p>
+          </div>
+        </div>
+        <div class="grid-3-columns-uneven">
+          <div>
+            <a href="#home">Back to top</a>
           </div>
         </div>
       </footer>
