--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
             <p>
               This website was coded by
               <a
-                href="https://jovial-strudel-724475.netlify.app/"
+                href="https://saana-ahonen.netlify.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 >Saana Ahonen</a
